Minor CSS refactor. STILL TRYING TO FIX DISTORTED FONTS ON MOBILE

--- a/src/styles/sass/_preset.scss
+++ b/src/styles/sass/_preset.scss
@@ -6,16 +6,12 @@
 
 html {
     height: 100%;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 body {
     min-height: 100%;
-    font-family: system-ui, sans-serif;
-    font-smoothing: antialiased;
-    -webkit-font-smoothing: antialiased;
-    -webkit-text-size-adjust: 100%;
-    text-size-adjust: 100%;
+    font-family: Arial, system-ui, sans-serif;
 }
 
 h1,
