--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -29,8 +29,6 @@ body {
     text-align: center;
 }
 
-// HEADER
-
 header {
     background-color: salmon;
 
@@ -164,6 +162,7 @@ header {
                         }
 
                         @media (min-width: 1150px) {
+                            // .hidden from utility classes specificity is too low
                             &.hidden {
                                 display: none;
                             }
@@ -175,8 +174,6 @@ header {
                             top: 70px;
                             right: 0;
                         }
-
-                        // .hidden from utility classes specificity is too low
                     }
                 }
 
@@ -341,12 +338,6 @@ main {
                 left: -9999px;
             }
 
-            tr {
-                border: 1px solid;
-                border-bottom: none;
-                border-top: none;
-            }
-
             tr.quest {
                 border-top: 1px solid;
             }
@@ -364,7 +355,7 @@ main {
                 border: none;
                 border-bottom: 1px solid;
                 position: relative;
-                padding-left: 50%;
+                padding-left: 6.5rem;
             }
 
             td:before {
@@ -394,7 +385,7 @@ main {
             }
 
             td:nth-of-type(3):before {
-                content: "Quest Completed";
+                content: "Completed";
             }
 
             tr .extra-detail::before {
